security layer updated